--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Olá Mundo! Este é o meu primeiro site. <br>
+    <p>Olá Mundo! Este é o meu primeiro site.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum reprehenderit ea sequi autem mollitia explicabo pariatur rerum eius recusandae vero est porro alias modi facere, id quasi sapiente laborum ipsam dolorem architecto totam a rem voluptatum? Amet veritatis voluptas molestiae, inventore repellendus maiores, quos ut nisi eveniet delectus sint magni.</p>
     <img src="pessoas.foto.jpg" alt="" width="360px">
 </body>
 </html>
